# wwtp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.peepypoo-base  Dockerfile.ui  Dockerfile.ui.peepypoo  README.md  api_client.py  docker-compose.yml  peepypoo_sim.py  pyproject.toml  requirements_ui.txt  streamlit_app.py  test_peepypoo.py  train_mlflow.py
.github/workflows/: ci.yml
app/: peepypoo_sim.py  streamlit_app.py
src/wwtp/: __init__.py  config.py  data_prep.py  logging_cfg.py  model.py  predict.py  predictor.py  train.py
src/wwtp/client/: __init__.py  http.py
src/wwtp/simulation/: __init__.py  base.py  peepypoo.py  synthetic.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_simulation.py
tests/unit/: test_client.py  test_config.py  test_data_prep.py  test_logging.py  test_model.py  test_simulation.py
wwtp_rnn_mlflow/wwtp_rnn_bundle/: README.md
wwtp_rnn_mlflow/wwtp_rnn_bundle/artifacts/: LSTM_e50_b100_lb8_test_predictions.csv  RNN_e50_b100_lb8_test_predictions.csv  evaluation_predictions.csv  training_summary.json
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/0/: meta.yaml
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/: meta.yaml
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/1ea0da5dd20549dea78db1770a219acb/: meta.yaml
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/1ea0da5dd20549dea78db1770a219acb/artifacts/: model_summary.txt
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/1ea0da5dd20549dea78db1770a219acb/metrics/: mae  r2  rmse  train_loss  train_seconds  val_loss
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/75333769ea674052a7b859b2d585402b/: meta.yaml
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/75333769ea674052a7b859b2d585402b/artifacts/: RNN_e50_b100_lb8_scalers.joblib  RNN_e50_b100_lb8_test_predictions.csv  feature_names.json
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/75333769ea674052a7b859b2d585402b/metrics/: mae  r2  rmse  train_loss  train_seconds  val_loss
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/75333769ea674052a7b859b2d585402b/tags/: mlflow.runName
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/8b66f92aef9849d699b5577cba5bebbb/: meta.yaml
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/8b66f92aef9849d699b5577cba5bebbb/artifacts/: LSTM_e50_b100_lb8_scalers.joblib  model_summary.txt
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/8b66f92aef9849d699b5577cba5bebbb/metrics/: mae  r2  rmse  train_loss  train_seconds  val_loss
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/8b66f92aef9849d699b5577cba5bebbb/params/: target
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/248838729491991513/c4e20936d620458b8d508f43d42e572d/: meta.yaml
wwtp_rnn_mlflow/wwtp_rnn_bundle/mlruns/models/wwtp_effluent_predictor/: meta.yaml
wwtp_rnn_mlflow/wwtp_rnn_bundle/src/: data_prep.py  model.py  predict.py
(+59 files in other folders)
