[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wwtp-rnn"
version = "1.0.0"
description = "WWTP effluent prediction using RNN/LSTM — reproduction of Wongburi & Park (2023)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
train = [
    "tensorflow>=2.16.0",
    "mlflow>=3.12.0",
    "cloudpickle>=3.0.0",
    "matplotlib>=3.8.0",
]
ui = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "scipy>=1.13.0",
]
dev = [
    "wwtp-rnn[train,ui]",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
wwtp-train = "wwtp.train:main"
wwtp-predict = "wwtp.predict:main"

[tool.setuptools.packages.find]
where = ["src"]

# ─────────────────────────── Ruff ───────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (public API)
]
ignore = [
    "ANN101",  # missing type for `self`
    "ANN102",  # missing type for `cls`
    "B008",    # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # annotations not required in tests

[tool.ruff.lint.isort]
known-first-party = ["wwtp"]

# ─────────────────────────── Mypy ───────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "app/"]

# ─────────────────────────── Pytest ─────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration (deselect with '-m not integration')",
    "slow: marks tests that take > 30s",
]
addopts = "-v --tb=short"

# ─────────────────────────── Coverage ───────────────────────────────────────
[tool.coverage.run]
source = ["src/wwtp"]
omit = [
    # Requires Julia at runtime — covered by integration tests only
    "src/wwtp/simulation/peepypoo.py",
    # Require a live MLflow server / Keras training — covered by integration tests
    "src/wwtp/train.py",
    "src/wwtp/predictor.py",
    "src/wwtp/predict.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
